# ondo

./: .dockerignore  .gitignore  API.md  CLAUDE.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml  requirements.in  requirements.txt  tailwind.config.js  test_isr.py
.github/: settings.yml
.github/workflows/: build-push-deploy.yaml  build-push-deploy.yaml.diable  ci.yml
config/: deploy.yml
src/: __main__.py  config.py  logger.py  state.py
src/leaky/: __init__.py  root.py  utils.py
src/leaky/models/: __init__.py  base.py  blog.py  gallery.py  listening.py  tracks.py
src/server/: __init__.py  deps.py  isr.py  isr_auto.py
src/server/api/: __init__.py
src/server/cache/: __init__.py  storage.py
src/server/handlers/: __init__.py  isr.py  page.py
src/server/health/: __init__.py
src/server/html/: __init__.py  audio.py  blog.py  gallery.py  index.py  music.py
src/server/pages/: __init__.py  blog.py  gallery.py  index.py  music.py
src/server/status/: __init__.py
static/css/: main.css
styles/: main.css
templates/: base.html  header.html  index.html
templates/components/: footer.html  header.html  menu-modal.html  social-links.html  theme-switcher.html  typing-header.html
templates/components/audio/: audio_track.html  audio_tracks_list.html
templates/components/blog/: blog_post.html  blog_posts_list.html
templates/components/gallery/: gallery_item.html  gallery_items_grid.html
templates/components/music/: audio_player.html  tracks_list.html  (+3 more)
templates/layouts/: app.html
templates/pages/: 404.html  about.html  index.html
(+13 files in other folders)
